--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "description": "a component to detect the browser user is using",
-  "name": "@polymer/browser-detector",
+  "name": "dr-niels-browser-detector",
   "version": "1.0.0",
   "resolutions": {
     "inherits": "2.0.3",
